--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrderListEmployee.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrderListEmployee.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="il.cshaifasweng.OCSFMediatorExample.client.OrderListEmployeeController"
-            prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.OrderListEmployeeController">
+   <children>
+      <Text fx:id="OrderListL" fill="#b91b1b" layoutX="199.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Orders List" textAlignment="CENTER" />
+      <Button fx:id="userName" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" />
+      <TableView fx:id="tableView" layoutX="40.0" layoutY="80.0" prefHeight="270.0" prefWidth="520.0">
+         <columns>
+            <TableColumn fx:id="orderN" minWidth="0.0" prefWidth="88.0" text="Order Number" />
+            <TableColumn fx:id="orderReceiver" prefWidth="108.0" text="Receiver" />
+            <TableColumn fx:id="orderDescription" prefWidth="108.0" text="Order Description" />
+            <TableColumn fx:id="orderDate" prefWidth="108.0" text="Order Date" />
+            <TableColumn fx:id="orderAddress" prefWidth="108.0" text="Address" />
+         </columns>
+      </TableView>
+      <Button fx:id="returnBtn" layoutX="209.0" layoutY="360.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Return" />
+      <Button fx:id="suppliedBtn" layoutX="309.0" layoutY="360.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Supplied" />
+   </children>
 </AnchorPane>
