--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrderListEmployee.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrderListEmployee.fxml
@@ -6,11 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.OrderListEmployeeController">
    <children>
       <Text fx:id="OrderListL" fill="#b91b1b" layoutX="199.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Orders List" textAlignment="CENTER" />
-      <Button fx:id="userName" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" />
+      <Button fx:id="userName" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#getDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" />
       <TableView fx:id="tableView" layoutX="40.0" layoutY="80.0" prefHeight="270.0" prefWidth="520.0">
          <columns>
             <TableColumn fx:id="orderN" minWidth="0.0" prefWidth="88.0" text="Order Number" />
@@ -20,7 +19,7 @@
             <TableColumn fx:id="orderAddress" prefWidth="108.0" text="Address" />
          </columns>
       </TableView>
-      <Button fx:id="returnBtn" layoutX="209.0" layoutY="360.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Return" />
-      <Button fx:id="suppliedBtn" layoutX="309.0" layoutY="360.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Supplied" />
+      <Button fx:id="returnBtn" layoutX="209.0" layoutY="360.0" mnemonicParsing="false" onAction="#backBtn" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Return" />
+      <Button fx:id="suppliedBtn" layoutX="309.0" layoutY="360.0" mnemonicParsing="false" onAction="#supplyOrder" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Supplied" />
    </children>
 </AnchorPane>
