--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrdersReportsBoundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrdersReportsBoundary.fxml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane id="orderslayout" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.OrdersReportsController">
    <children>
-      <BarChart id="ordersChart" fx:id="ordersChart" layoutY="151.0" prefHeight="225.0" prefWidth="585.0">
-         <xAxis>
-            <CategoryAxis id="monthAxis" fx:id="monthAxis" animated="false" side="BOTTOM" />
-         </xAxis>
-         <yAxis>
-            <NumberAxis id="incomeAxis" fx:id="incomeAxis" side="LEFT" />
-         </yAxis>
-      </BarChart>
       <Text fx:id="incomeTxt" fill="#b91b1b" layoutX="157.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Orders Report" textAlignment="CENTER" />
-      <ComboBox id="yearCB" fx:id="yearCB" layoutX="246.0" layoutY="110.0" prefWidth="150.0" />
       <Button id="returnBtn" fx:id="returnBtn" layoutX="20.0" layoutY="23.0" mnemonicParsing="false" onAction="#returnFunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="return" />
-      <ComboBox id="storeCB" fx:id="storeCB" layoutX="72.0" layoutY="110.0" prefWidth="150.0" />
       <Button id="userNameBtn" fx:id="userNameBtn" layoutX="496.0" layoutY="23.0" mnemonicParsing="false" onAction="#getDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="username" />
-      <Label fx:id="priceLabel" layoutX="430.0" layoutY="113.0" prefHeight="18.0" prefWidth="103.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="number of orders:" />
-      <Label id="yearIncome" fx:id="yearIncome" layoutX="533.0" layoutY="113.0" prefHeight="18.0" prefWidth="62.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="0$" />
+      <Label fx:id="priceLabel" layoutX="35.0" layoutY="200.0" prefHeight="53.0" prefWidth="138.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="total number of orders" />
+      <Label id="yearIncome" fx:id="yearIncome" layoutX="82.0" layoutY="244.0" prefHeight="18.0" prefWidth="62.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="0" />
+      <PieChart id="ordersChart" fx:id="ordersChart" layoutX="166.0" layoutY="152.0" prefHeight="247.0" prefWidth="434.0" />
+      <DatePicker id="startDate" fx:id="startDate" layoutX="26.0" layoutY="119.0" />
+      <DatePicker id="endDate" fx:id="endDate" layoutX="213.0" layoutY="119.0" />
+      <Button id="generateBtn" fx:id="generateBtn" layoutX="473.0" layoutY="119.0" mnemonicParsing="false" onAction="#generateFunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="Generate" />
+      <Label id="storeLabel" fx:id="storeLabel" layoutX="46.0" layoutY="165.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="store name" />
    </children>
 </AnchorPane>
