--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/ComplaintsReportsBoundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/ComplaintsReportsBoundary.fxml
@@ -21,11 +21,13 @@
       </BarChart>
       <Text fx:id="incomeTxt" fill="#b91b1b" layoutX="118.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Complaints Report" textAlignment="CENTER" />
       <Button id="returnBtn" fx:id="returnBtn" layoutX="20.0" layoutY="23.0" mnemonicParsing="false" onAction="#returnFunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="return" />
-      <Button id="userNameBtn" fx:id="userNameBtn" layoutX="496.0" layoutY="23.0" mnemonicParsing="false" onAction="#getDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="username" />
+      <Button id="userNameBtn" fx:id="userNameBtn" layoutX="496.0" layoutY="23.0" maxHeight="25.0" maxWidth="100.0" mnemonicParsing="false" onAction="#getDetails" prefHeight="25.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="username" />
       <Label fx:id="priceLabel" layoutX="46.0" layoutY="142.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="total number:" />
       <Label id="yearIncome" fx:id="yearIncome" layoutX="134.0" layoutY="142.0" prefHeight="18.0" prefWidth="22.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="0" />
-      <DatePicker id="startDate" fx:id="startDate" layoutX="46.0" layoutY="108.0" />
-      <DatePicker id="endDate" fx:id="endDate" layoutX="255.0" layoutY="108.0" />
+      <DatePicker id="startDate" fx:id="startDate" layoutX="50.0" layoutY="110.0" />
+      <DatePicker id="endDate" fx:id="endDate" layoutX="250.0" layoutY="110.0" />
       <Button id="generateBtn" fx:id="generateBtn" layoutX="498.0" layoutY="108.0" mnemonicParsing="false" onAction="#generateFunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="Generate" />
+      <Label fx:id="priceLabel11" layoutX="14.0" layoutY="115.0" prefHeight="18.0" prefWidth="32.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="from:" />
+      <Label fx:id="priceLabel111" layoutX="230.0" layoutY="115.0" prefHeight="18.0" prefWidth="22.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="to:" />
    </children>
 </AnchorPane>
