--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/IncomeReportsBoundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/IncomeReportsBoundary.fxml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.IncomeReportsController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.IncomeReportsController">
    <children>
       <Text fx:id="incomeTxt" fill="#b91b1b" layoutX="157.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Income Report" textAlignment="CENTER" />
       <Button id="returnBtn" fx:id="returnBtn" layoutX="20.0" layoutY="23.0" mnemonicParsing="false" onAction="#returnFunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="return" />
-      <Button id="userNameBtn" fx:id="userName" layoutX="469.0" layoutY="23.0" mnemonicParsing="false" onAction="#getDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="username" />
-      <Label fx:id="priceLabel" layoutX="62.0" layoutY="276.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="overall income: " />
-      <Label id="yearIncome" fx:id="finalres" layoutX="165.0" layoutY="276.0" prefHeight="18.0" prefWidth="38.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="0$" />
+      <Button id="userNameBtn" fx:id="userName" layoutX="469.0" layoutY="23.0" maxHeight="25.0" maxWidth="100.0" mnemonicParsing="false" onAction="#getDetails" prefHeight="25.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="username" />
+      <Label fx:id="priceLabel" layoutX="255.0" layoutY="178.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="overall income: " />
+      <Label id="yearIncome" fx:id="finalres" layoutX="353.0" layoutY="177.0" prefHeight="18.0" prefWidth="38.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="0$" />
       <DatePicker fx:id="start" layoutX="48.0" layoutY="127.0" />
       <DatePicker fx:id="end" layoutX="48.0" layoutY="174.0" />
-      <Button fx:id="confirm" layoutX="72.0" layoutY="223.0" mnemonicParsing="false" onAction="#confirm" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="confirm" />
-      <Label fx:id="priceLabel1" layoutX="27.0" layoutY="104.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="choose dates:" />
-      <Label fx:id="priceLabel11" layoutX="13.0" layoutY="131.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="from" />
-      <Label fx:id="priceLabel111" layoutX="13.0" layoutY="178.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="to" />
+      <Button fx:id="confirm" layoutX="255.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirm" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="Generate" />
+      <Label fx:id="priceLabel11" layoutX="13.0" layoutY="131.0" prefHeight="18.0" prefWidth="31.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="from:" />
+      <Label fx:id="priceLabel111" layoutX="13.0" layoutY="178.0" prefHeight="18.0" prefWidth="20.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="to:" />
+      <BarChart id="incomeChart" fx:id="incomeChart" layoutX="47.0" layoutY="200.0" maxHeight="194.0" maxWidth="502.0" minHeight="194.0" minWidth="502.0" prefHeight="194.0" prefWidth="502.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
    </children>
 </AnchorPane>
