--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrdersReportsBoundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/OrdersReportsBoundary.fxml
@@ -11,13 +11,16 @@
    <children>
       <Text fx:id="incomeTxt" fill="#b91b1b" layoutX="157.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Orders Report" textAlignment="CENTER" />
       <Button id="returnBtn" fx:id="returnBtn" layoutX="20.0" layoutY="23.0" mnemonicParsing="false" onAction="#returnFunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="return" />
-      <Button id="userNameBtn" fx:id="userNameBtn" layoutX="496.0" layoutY="23.0" mnemonicParsing="false" onAction="#getDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="username" />
+      <Button id="userNameBtn" fx:id="userNameBtn" layoutX="496.0" layoutY="23.0" maxHeight="25.0" maxWidth="100.0" mnemonicParsing="false" onAction="#getDetails" prefHeight="25.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="username" />
       <Label fx:id="priceLabel" layoutX="35.0" layoutY="200.0" prefHeight="53.0" prefWidth="138.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="total number of orders" />
       <Label id="yearIncome" fx:id="yearIncome" layoutX="82.0" layoutY="244.0" prefHeight="18.0" prefWidth="62.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="0" />
       <PieChart id="ordersChart" fx:id="ordersChart" layoutX="166.0" layoutY="152.0" prefHeight="247.0" prefWidth="434.0" />
-      <DatePicker id="startDate" fx:id="startDate" layoutX="26.0" layoutY="119.0" />
-      <DatePicker id="endDate" fx:id="endDate" layoutX="213.0" layoutY="119.0" />
+      <DatePicker id="startDate" fx:id="startDate" layoutX="50.0" layoutY="119.0" />
+      <DatePicker id="endDate" fx:id="endDate" layoutX="250.0" layoutY="119.0" />
       <Button id="generateBtn" fx:id="generateBtn" layoutX="473.0" layoutY="119.0" mnemonicParsing="false" onAction="#generateFunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="Generate" />
-      <Label id="storeLabel" fx:id="storeLabel" layoutX="46.0" layoutY="165.0" prefHeight="16.0" prefWidth="89.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="store name" />
+      <Label fx:id="priceLabel1" layoutX="35.0" layoutY="276.0" prefHeight="53.0" prefWidth="138.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="total number of flowers" />
+      <Label id="numOfFlowers" fx:id="numOfFlowers" layoutX="82.0" layoutY="320.0" prefHeight="18.0" prefWidth="62.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="0" />
+      <Label fx:id="priceLabel11" layoutX="14.0" layoutY="123.0" prefHeight="18.0" prefWidth="34.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="from:" />
+      <Label fx:id="priceLabel111" layoutX="231.0" layoutY="123.0" prefHeight="18.0" prefWidth="17.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="to:" />
    </children>
 </AnchorPane>
